added basic test

--- a/gradle/javaprojects.gradle
+++ b/gradle/javaprojects.gradle
@@ -12,3 +12,4 @@ tasks.withType(JavaCompile) {
 ext.springCoreVersion = '3.2.10.RELEASE'
 ext.slf4jApiVersion = '1.7.5'
 ext.jgraphtCoreVersion = '0.9.0'
+ext.testngVersion = '6.8.7'
