more testing of @ManuallyWired

--- a/core/core.gradle
+++ b/core/core.gradle
@@ -1,6 +1,6 @@
 dependencies {
     compile "org.springframework:spring-context:$springCoreVersion",
-            "org.jgrapht:jgrapht-core:$jgraphtCoreVersion"
+            "org.jgrapht:jgrapht-core:$jgraphtCoreVersion",
             "org.slf4j:slf4j-api:$slf4jApiVersion"
 
     testCompile "org.testng:testng:$testngVersion"
