--- a/gradle/javaprojects.gradle
+++ b/gradle/javaprojects.gradle
@@ -13,3 +13,4 @@ ext.springCoreVersion = '3.2.10.RELEASE'
 ext.slf4jApiVersion = '1.7.5'
 ext.jgraphtCoreVersion = '0.9.0'
 ext.testngVersion = '6.8.7'
+ext.logbackClassicVersion = '1.0.13'
