--- a/core/core.gradle
+++ b/core/core.gradle
@@ -11,11 +11,38 @@ test {
     useTestNG()
 }
 
+
+apply plugin: 'maven-publish'
+
+
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
 publishing {
     publications {
         mavenCustom(MavenPublication) {
+            from components.java
+
+            groupId 'org.headstar'
+            artifactId 'beangraph'
+
             pom.withXml {
                 asNode().appendNode('description', 'Core library generating Spring bean graph')
+            }
+
+            artifact sourceJar {
+                classifier "sources"
+            }
+
+        }
+    }
+    repositories {
+        maven {
+            url "http://localhost:8081/nexus/content/repositories/snapshots/"
+            credentials {
+                username 'admin'
+                password 'admin123'
             }
         }
     }
