--- a/core/core.gradle
+++ b/core/core.gradle
@@ -24,11 +24,11 @@ publishing {
         mavenCustom(MavenPublication) {
             from components.java
 
-            groupId 'org.headstar.beangraph'
-            artifactId 'beangraph-core'
+            groupId 'org.headstar.beansgraph'
+            artifactId 'beansgraph-core'
 
             pom.withXml {
-                asNode().appendNode('description', 'Core library generating Spring bean graph')
+                asNode().appendNode('description', 'Core library generating a graph of Spring bean dependencies')
             }
 
             artifact sourceJar {
