--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ def String[] modules = [
 
 include modules
 
-rootProject.name = 'beangraph'
+rootProject.name = 'beansgraph'
 
 modules.each {name ->
 	def p = findProject(":${name}")
