--- a/core/core.gradle
+++ b/core/core.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.7.1'
+    }
+}
+
 dependencies {
     compile "org.springframework:spring-context:$springCoreVersion",
             "org.jgrapht:jgrapht-core:$jgraphtCoreVersion",
@@ -12,38 +22,49 @@ test {
 }
 
 
-apply plugin: 'maven-publish'
+apply plugin: 'nexus'
 
+
+modifyPom {
+    project {
+        name 'Spring beans graph'
+        description 'Core library generating a graph of Spring bean dependencies'
+        url 'https://github.com/headstar/spring-beans-graph'
+        inceptionYear '2014'
+
+        scm {
+            url 'https://github.com/headstar/spring-beans-graph'
+            connection 'scm:https://github.com/headstar/spring-beans-graph.git'
+            developerConnection 'scm:git@github.com:headstar/spring-beans-graph.git'
+        }
+
+        licenses {
+            license {
+                name 'The Apache Software License, Version 2.0'
+                url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                distribution 'repo'
+            }
+        }
+
+        developers {
+            developer {
+                id 'per'
+                name 'Per Johansson'
+                email 'per.johansson@post.com'
+            }
+        }
+    }
+}
+
+nexus {
+    attachSources = false
+    attachTests = false
+    attachJavadoc = false
+    sign = false
+    repositoryUrl = 'http://localhost:8081/nexus/content/repositories/releases/'
+    snapshotRepositoryUrl = 'http://localhost:8081/nexus/content/repositories/snapshots/'
+}
 
 task sourceJar(type: Jar) {
     from sourceSets.main.allJava
-}
-
-publishing {
-    publications {
-        mavenCustom(MavenPublication) {
-            from components.java
-
-            groupId 'org.headstar.beansgraph'
-            artifactId 'beansgraph-core'
-
-            pom.withXml {
-                asNode().appendNode('description', 'Core library generating a graph of Spring bean dependencies')
-            }
-
-            artifact sourceJar {
-                classifier "sources"
-            }
-
-        }
-    }
-    repositories {
-        maven {
-            url "http://localhost:8081/nexus/content/repositories/snapshots/"
-            credentials {
-                username 'admin'
-                password 'admin123'
-            }
-        }
-    }
 }
