--- a/core/core.gradle
+++ b/core/core.gradle
@@ -61,7 +61,7 @@ nexus {
     attachSources = true
     attachTests = false
     attachJavadoc = true
-    sign = false
+    sign = true
     repositoryUrl = 'http://localhost:8081/nexus/content/repositories/releases/'
     snapshotRepositoryUrl = 'http://localhost:8081/nexus/content/repositories/snapshots/'
 }
