don't use local nexus urls

--- a/core/core.gradle
+++ b/core/core.gradle
@@ -62,6 +62,6 @@ nexus {
     attachTests = false
     attachJavadoc = true
     sign = true
-    repositoryUrl = 'http://localhost:8081/nexus/content/repositories/releases/'
-    snapshotRepositoryUrl = 'http://localhost:8081/nexus/content/repositories/snapshots/'
+    // repositoryUrl = 'http://localhost:8081/nexus/content/repositories/releases/'
+    // snapshotRepositoryUrl = 'http://localhost:8081/nexus/content/repositories/snapshots/'
 }
