--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
         classpath "net.saliman:gradle-cobertura-plugin:2.2.4"
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.0'
     }
 }
 
@@ -16,7 +17,10 @@ ext.javaProjects = subprojects
 configure(javaProjects) {
     apply from: "$rootDir/gradle/javaprojects.gradle"
 
-    apply plugin: net.saliman.gradle.plugin.cobertura.CoberturaPlugin
+    apply plugin: 'cobertura'
+    apply plugin: 'com.github.kt3k.coveralls'
+
+    cobertura.coverageFormats = ['html', 'xml'] // coveralls plugin depends on xml format report
 }
 
 allprojects {
