specific description per module

--- a/core/core.gradle
+++ b/core/core.gradle
@@ -11,4 +11,9 @@ test {
     useTestNG()
 }
 
+modifyPom {
+    project {
+        description 'Core library generating a graph of Spring bean dependencies'
+    }
+}
 
