use junit instead of testng (less ide integration problems)

--- a/core/core.gradle
+++ b/core/core.gradle
@@ -3,12 +3,8 @@ dependencies {
             "org.jgrapht:jgrapht-core:$jgraphtCoreVersion",
             "org.slf4j:slf4j-api:$slf4jApiVersion"
 
-    testCompile "org.testng:testng:$testngVersion"
+    testCompile "junit:junit:$junitVersion"
     testRuntime "ch.qos.logback:logback-classic:$logbackClassicVersion"
-}
-
-test {
-    useTestNG()
 }
 
 modifyPom {
