added maven publishing

--- a/core/core.gradle
+++ b/core/core.gradle
@@ -13,3 +13,22 @@ modifyPom {
     }
 }
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            artifact sourceJar {
+                classifier "sources"
+            }
+        }
+    }
+
+    repositories {
+        mavenLocal()
+    }
+}
